<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
   android:background="#E9FF54"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:gravity="center"
        android:text="@string/Title"
        android:textSize="50sp"

        android:textColor="@color/Black"
        android:textStyle="normal" />

    <Button
        android:id="@+id/button"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:textSize="18sp"
        android:background="@drawable/border"
        android:gravity="center"
        android:text="@string/Loginbt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:background="@color/Blue"
        android:gravity="center"

        android:text="@string/Signupbt"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:textStyle="normal" />
</RelativeLayout>