<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light"
    android:layout_height="match_parent"
    tools:context=".PhoneAuthentication">


    android:background="@color/light"

    <EditText
        android:id="@+id/Phonenum"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="59dp"
        android:layout_marginTop="49dp"
        android:background="@color/light"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:ems="10"
        android:hint="@string/phonenum"
        android:inputType="phone"
        android:textColorHint="@color/White" />

    <EditText
        android:id="@+id/authtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="57dp"
        android:drawableLeft="@drawable/ic_smartphone_black_24dp"
        android:ems="10"
        android:hint="@string/Auth_code"
        android:inputType="number"
        android:textColorHint="@color/White"
        android:visibility="gone" />

    <Button
        android:id="@+id/Verifybt"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:background="@drawable/border"
        android:text="@string/verify" />

    <Button
        android:id="@+id/submit"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Verifybt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:text="Submit"
        android:visibility="visible" />

    <Button
        android:id="@+id/Loginbt"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/Verifybt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:text="Login"
        android:visibility="invisible" />

</RelativeLayout>